--- a/client_cms_static/CustomThemes/maciek/ccss/search.css
+++ b/client_cms_static/CustomThemes/maciek/ccss/search.css
@@ -92,7 +92,7 @@ div.detailed_search_form div.search_scope {
 div.detailed_search_form div.search_scope input,
 div.detailed_search_form div.search_scope label {
   float: left;
-  margin-top: 1em;
+  margin-top: 0.6em;
   font-weight: normal;
   font-size: 1em;
   padding: 0;
